crates/sui-adapter-transactional-tests/tests/programmable_transaction_examples/publish.snap
---
source: external-crates/move/crates/move-transactional-test-runner/src/framework.rs
assertion_line: 920
---
processed 9 tasks

init:
A: object(0,0)

task 3, lines 27-32:
//# programmable --sender A --inputs 10 @A
//> 0: SplitCoins(Gas, [Input(0)]);
//> 1: Publish(q, []);
//> 2: TransferObjects([Result(0)], Input(1));
//> 3: Publish(p, []);
//> TransferObjects([Result(1), Result(3)], Input(1))
created: object(3,0), object(3,1), object(3,2), object(3,3), object(3,4)
mutated: object(0,0)
gas summary: computation_cost: 1000000, storage_cost: 8899600,  storage_rebate: 0, non_refundable_storage_fee: 0

task 6, lines 38-40:
//# programmable --sender A
//> 0: q::m::x();
//> p::m::foo(Result(0))
Error: Error checking transaction input objects: A move package is expected, instead a move object is passed: object(3,2)

task 7, lines 42-47:
//# publish --dependencies p q
Error: error[E03002]: unbound module
   ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpPJtTLV:45:9
   │
45 │         p::m::foo(q::m::x())
   │         ^^^^ Unbound module 'p::m'

error[E03002]: unbound module
   ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpPJtTLV:45:19
   │
45 │         p::m::foo(q::m::x())
   │                   ^^^^ Unbound module 'q::m'



task 8, line 49:
//# run r::all::foo_x
Error: Error checking transaction input objects: Dependent package not found on-chain: 0x0000000000000000000000000000000000000000000000000000000000000000
